@startuml WG_Expense_Tracker

entity "Person" as person {
  * id : INTEGER <<PK>>
  --
  * first-name : VARCHAR
  * last-name : VARCHAR
}

entity "Expense" as expense {
  * id : INTEGER <<PK>>
  --
  * amount : FLOAT
  * date : DATETIME
  * description : VARCHAR
  * paid_by_id : INTEGER <<FK>>
}

entity "ExpenseSplit" as split {
  * expense_id : INTEGER <<FK, PK>>
  * person_id : INTEGER <<FK, PK>>
}

person ||--o{ expense : "paid_by"
expense ||--|{ split : "split"
person ||--|{ split : "involved_in"

@enduml